src/assets/base.css
@font-face {
  font-family: 'Avenir';
  src: url(./fonts/avenir_ff/AvenirLTStd-Roman.otf) format(opentype);
}

@font-face {
  font-family: 'Avenir Bold';
  src: url(./fonts/avenir_ff/AvenirLTStd-Black.otf) format(opentype);
}

@font-face {
  font-family: 'Tiempos Headline';
  src: url(./fonts/Tiempos-Font/TiemposHeadline-Semibold.otf) format(opentype);
}

/* General Stylings */
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  position: relative;
  font-weight: normal;
  scroll-behavior: smooth;
}

body {
  min-height: 100vh;
  line-height: 1.5;
  font-size: 16px;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: 'Avenir', sans-serif;
  background-color: #fffcf9;
  scroll-behavior: smooth;
}

.container {
  width: 100%;
  max-width: 1280px;
  margin: 0 auto;
}

.pad-cont {
  padding: 0 150px;
}

h1 {
  font-family: 'Tiempos Headline', sans-serif;
}

.primary-heading {
  font-family: 'Tiempos Headline', sans-serif;
  font-size: 36px;
  font-weight: 500;
}

.primary-paragraph {
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-weight: 500;
}

.btn-primary {
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.5rem;
  padding: 0.75rem 1.5rem;
  transition: all 0.15s;
  cursor: pointer;
  background: transparent;
  font-family: inherit;
  text-decoration: none;
  width: max-content;
}

@media screen and (max-width: 1024px) {
  .container {
    max-width: 900px;
  }

  .pad-cont {
    padding: 0 1.25rem;
  }

  .primary-heading {
    font-size: 28px;
  }
}

@media screen and (max-width: 900px) {
  .container {
    max-width: 700px;
  }
}

